--- a/index.html
+++ b/index.html
@@ -8,8 +8,31 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+             <!-- start nav -->
     <div class="container">
-        
+        <div class="navbar">
+            <img src="../Urban Fashion/logo.png" class="logo">
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Collection</a></li>
+                    <li><a href="#">Category</a></li>
+                </ul>
+            </nav>
+            <img src="../Urban Fashion/cart.png" class="cart">
+        </div>
+        <div class="content">
+            <a href="#" class="btn">2020 Collections</a>
+            <h1>You should always <br> feel pretty</h1>
+            <p>Clothes that are sure to heat your winter</p>
+            <div class="arrow-item">
+                <img src="back-arrow.png" alt="">
+                <img src="next-arrow.png" alt="">
+            </div>
+        </div>
     </div>
+            <img src="img.png" class="feature-img">
+    
 </body>
 </html>
